[tool.poetry]
name = "indiana-docs"
version = "1.2.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1"
requests = "^2.22"
waitress = "^1.4"
lxml = "^4.7.1"
gunicorn = "^20.1.0"
prometheus-client = "^0.15.0"
MarkupSafe = "2.0.1"
Flask-Compress = "^1.13"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
